--- a/src/app/Stars/Stars.component.scss
+++ b/src/app/Stars/Stars.component.scss
@@ -13,7 +13,7 @@
 
     // Con esto separamos las estrellas
     input:nth-child(even) {
-        margin-left: 2em;
+        margin-left: 1em;
       }
     
 
@@ -27,6 +27,9 @@
       cursor: pointer;
       appearance: none;
       overflow: hidden;
+      font-size: 34px;
+      left: 4px;
+      right: 4px;
 
 
     //   Aquí está el color de fondo de las estrellas
@@ -34,16 +37,15 @@
         content: "\f005";
         position: absolute;
         font-family: fontAwesome;
-        font-size: 34px;
         position: absolute;
-        left: 4px;
+        left: inherit;
         color: #000;
         transition: 0.5s;
       }
 
       &:nth-child(2n + 1) {
         &:before {
-          right: 4px;
+          right: inherit;
           left: initial;
         }
       }
