--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
 <Stars [stars]="starsOptions" (rating)="gerStarsNumber($event)" ></Stars>
+<Stars [stars]="starsOptions2" (rating)="gerStarsNumber($event)" ></Stars>
+<Stars [stars]="starsOptions3" (rating)="gerStarsNumber($event)" ></Stars>
