--- a/src/app/Stars/Stars.component.scss
+++ b/src/app/Stars/Stars.component.scss
@@ -13,7 +13,7 @@
 
     // Con esto separamos las estrellas
     input:nth-child(even) {
-        margin-left: 1em;
+        margin-left: 1rem;
       }
     
 
